<resources>
    <string name="app_name">BinkitClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continueBtn">Continue</string>
    <string name="mob_number">Enter mobile number</string>
    <string name="login">Login or sign up</string>
    <string name="tagLine">India\'s last minute app</string>
    <string name="signImg">signInImg</string>
    <string name="OTP_text">We have sent a verification code to</string>
    <string name="codeNo">+91 </string>
    <string name="loginBtn">Login</string>
    <string name="loading">Loading....</string>
    <string name="profile_image">Profile Image</string>
    <string name="category_image">Category Image</string>
    <string name="category_title">Vegetables and Fruits</string>
    <string name="title">Nandini Toned Freash Milk alda aloie hbeh euhfoen oiefjf</string>
    <string name="back_button">Back Button</string>
    <string name="no_products_added_in_this_category">No products added in this category</string>
    <string name="search">Search</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_500ml">_500ml</string>
    <string name="_25">$25</string>
    <string name="add">Add</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="addSign">+</string>
    <string name="product_image">Product Image</string>
    <string name="nandini_milk">Nandini Milk</string>
    <string name="_40g">40g</string>
    <string name="_50">₹50</string>
    <string name="item">ITEM</string>
    <string name="up_button">Up button</string>
    <string name="next">Next</string>
    <string name="right_button">Right Button</string>
    <string name="bill_details">Bill Details</string>
    <string name="sub_total">Sub Total</string>
    <string name="_179">179</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="free">Free</string>
    <string name="grand_total">Grand Total</string>
    <string name="phonepe_upi">PhonePe UPI</string>
    <string name="place_order">Place Order</string>
    <string name="products_in_the_cart">Products in the cart</string>
</resources>