<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".auth.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLoginImage"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_300sdp"
            android:contentDescription="@string/signImg"
            android:scaleType="centerCrop"
            android:src="@drawable/image_prod"/>

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:text="@string/tagLine"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="17dp"
            app:boxCornerRadiusBottomStart="17dp"
            app:boxCornerRadiusTopEnd="17dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="17dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart = "@drawable/ic_phone"
                android:drawablePadding = "10dp"
                android:hint="@string/mob_number"
                android:inputType = "number"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#8d99ae"
            android:text="@string/continueBtn"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"/>



        </LinearLayout>

    </ScrollView>

</LinearLayout>