<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clCartProducts"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="13dp"
            android:layout_marginStart="2.6dp"
            android:text="@string/products_in_the_cart"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/llCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cart"
            android:layout_gravity="bottom|center"
            android:baselineAligned="false"
            android:padding="13dp"
            android:weightSum="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llItemCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProductImage"
                    android:layout_width="39dp"
                    android:layout_height="39dp"
                    android:background="@drawable/bg_see_all"
                    android:contentDescription="@string/add_to_cart"
                    android:padding="4dp"
                    android:src="@drawable/ic_cart"/>

                <TextView
                    android:id="@+id/tvNumberOfProductCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:text="@string/_0"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:text="@string/item"
                    android:textSize="18sp"/>

                <ImageButton
                    android:id="@+id/ivShowingProductsCart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/up_button"
                    android:src="@drawable/ic_arrow_up" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/bg_product_view"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/right_button"
                    android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>