<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            
            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="39dp"
                android:layout_height="52dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_see_all"
                android:contentDescription="@string/product_image"
                android:padding="4dp"
                android:src="@drawable/milma_milk"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="2.4"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvProductTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/nandini_milk"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvProductQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/_40g"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/_50"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_60sdp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:background="@drawable/bg_product_view"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">


<!--                <TextView-->
<!--                    android:id="@+id/tvDecrementCount"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/minus"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textSize="20sp"/>-->

                <TextView
                    android:id="@+id/tvProductCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

<!--                <TextView-->
<!--                    android:id="@+id/tvIncrementCount"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/addSign"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textSize="20sp"/>-->

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>