<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbOrderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_yellow"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Checkout"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:background="#D4D4D4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbOrderFragment"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCartProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:padding="6dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductsItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBillDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:padding="6dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCartProducts"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

<!--                For Sub Total       -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:contentDescription="@string/sub_total"
                        android:src="@drawable/baseline_article_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_total"
                        android:layout_weight="0.6"
                        android:layout_marginStart="13dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvSubTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_179"
                        android:layout_weight="0.4"
                        android:gravity="end"
                        android:layout_marginEnd="13dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                </LinearLayout>

<!--             For Delivery Charge     -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:contentDescription="@string/delivery_charge"
                        android:src="@drawable/baseline_directions_bike_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_charge"
                        android:layout_weight="0.6"
                        android:layout_marginStart="13dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvDeliveryCharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free"
                        android:layout_weight="0.4"
                        android:gravity="end"
                        android:layout_marginEnd="13dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                </LinearLayout>

<!--                For Grand Total     -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_total"
                        android:layout_weight="0.6"
                        android:layout_marginStart="13dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tvGrandTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_179"
                        android:layout_weight="0.4"
                        android:gravity="end"
                        android:layout_marginEnd="13dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:layout_gravity="bottom|center"
        android:baselineAligned="false"
        android:padding="13dp"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/llItemCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/phonepe_upi"
                android:src="@drawable/phonepay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/phonepe_upi"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/bg_product_view"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/place_order"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:padding="6dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/right_button"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>